--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -4,6 +4,7 @@ const {title, description, image, frontmatter, robots} = Astro.props;
 ---
 <head>
     <meta charset="utf-8" />
+    <meta name="google-adsense-account" content="ca-pub-8397585981018540">
     <link rel="icon" type="image/svg+xml" href="/logomark.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
@@ -20,4 +21,6 @@ const {title, description, image, frontmatter, robots} = Astro.props;
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&family=Roboto&display=swap" rel="stylesheet">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8397585981018540"
+     crossorigin="anonymous"></script>
 </head>
