add meta tag for google search

--- a/src/layouts/MainHead.astro
+++ b/src/layouts/MainHead.astro
@@ -7,6 +7,7 @@ const {title, description, image, frontmatter, robots} = Astro.props;
     <meta name="google-adsense-account" content="ca-pub-8397585981018540">
     <link rel="icon" type="image/svg+xml" href="/logomark.svg" />
     <meta name="viewport" content="width=device-width" />
+    <meta name="google-site-verification" content="bCuEP5RdJD51VufElfu6ObVUgRiDWKwjGbwww8BJY0M" />
     <meta name="generator" content={Astro.generator} />
     <title>TTB {title} Page</title>
     <meta name="description" content={description} />
