added Audio Category

--- a/src/pages/category/[category].astro
+++ b/src/pages/category/[category].astro
@@ -29,8 +29,8 @@ export async function getStaticPaths() {
             props: {name: "Internet"},
         },
         {
-            params: {category: slugify("Programming")},
-            props: {name: "Programming"},
+            params: {category: slugify("Audio")},
+            props: {name: "Audio"},
         },
     ]
 }
