--- a/src/pages/category/[category].astro
+++ b/src/pages/category/[category].astro
@@ -32,6 +32,10 @@ export async function getStaticPaths() {
             params: {category: slugify("Audio")},
             props: {name: "Audio"},
         },
+        {
+            params: {category: slugify("Health")},
+            props: {name: "Health"},
+        },
     ]
 }
 
