--- a/src/pages/category/[category].astro
+++ b/src/pages/category/[category].astro
@@ -36,6 +36,10 @@ export async function getStaticPaths() {
             params: {category: slugify("Health")},
             props: {name: "Health"},
         },
+        {
+            params: {category: slugify("Raspberry Pi")},
+            props: {name: "Raspberry Pi"},
+        },
     ]
 }
 
